Add initial CMake configuration and test setup with Catch2 framework

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 4.0.0)
+cmake_minimum_required(VERSION 3.16)
 project(TAOW CXX)
 
 set(CMAKE_CXX_STANDARD 17)
@@ -9,3 +9,6 @@ include(CheckIPOSupported)
 check_ipo_supported(RESULT ipo_supported)
 message(IPO\ Supported?\  ${ipo_supported})
 set(INTERPROCEDURAL_OPTIMIZATION ${ipo_supported})
+
+enable_testing()
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/test)
