Add logger module with configuration and test cases

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,5 +10,7 @@ check_ipo_supported(RESULT ipo_supported)
 message(IPO\ Supported?\  ${ipo_supported})
 set(INTERPROCEDURAL_OPTIMIZATION ${ipo_supported})
 
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/logger)
+
 enable_testing()
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/test)
