--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -10,6 +10,7 @@ FetchContent_Declare(
 FetchContent_MakeAvailable(Catch2)
 
 add_executable(tests logger_test.cpp)
+target_link_libraries(tests PUBLIC logger)
 target_link_libraries(tests PRIVATE Catch2::Catch2WithMain)
 
 
