Refactor CMake configuration: update C++ standard to 20, restructure directories, and remove logger module

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.16)
 project(TAOW CXX)
 
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSION OFF)
 
@@ -10,7 +10,7 @@ check_ipo_supported(RESULT ipo_supported)
 message(IPO\ Supported?\  ${ipo_supported})
 set(INTERPROCEDURAL_OPTIMIZATION ${ipo_supported})
 
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/logger)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src)
 
 enable_testing()
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/test)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/test)
