--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,1 +1,4 @@
 cmake_minimum_required(VERSION 3.16)
+
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/http_client)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/utility)
