--- a/src/http_client/CMakeLists.txt
+++ b/src/http_client/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.16)
 
-add_library(taow_http_client STATIC http_client.cpp)
+add_library(taow_http_client STATIC http_client.cpp result.cpp)
 add_library(TAOW::http_client ALIAS taow_http_client)
 
 
