--- a/src/utils/CMakeLists.txt
+++ b/src/utils/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.16)
-add_library(taow_utils INTERFACE)
+add_library(taow_utils STATIC string_utils.cpp)
 add_library(TAOW::utils ALIAS taow_utils)
 
-target_include_directories(taow_utils INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include)
+target_include_directories(taow_utils PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
