Add Conan configuration and update CMake files for dependencies management

--- a/src/http_client/CMakeLists.txt
+++ b/src/http_client/CMakeLists.txt
@@ -6,9 +6,9 @@ target_include_directories(taow_http_client PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/i
 
 
 find_package(Boost CONFIG REQUIRED)
-target_include_directories(taow_http_client PRIVATE ${Boost_INCLUDE_DIRS})
+target_include_directories(taow_http_client PUBLIC ${Boost_INCLUDE_DIRS})
 
 find_package(ZLIB REQUIRED)
-target_link_libraries(taow_http_client PRIVATE ZLIB::ZLIB)
+target_link_libraries(taow_http_client PUBLIC ZLIB::ZLIB)
 
 target_link_libraries(taow_http_client PUBLIC TAOW::utils)
