--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,5 @@
 cmake_minimum_required(VERSION 3.16)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/cli_builder)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/json)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/http_client)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/utils)
