--- a/src/cli_builder/CMakeLists.txt
+++ b/src/cli_builder/CMakeLists.txt
@@ -2,4 +2,8 @@ cmake_minimum_required(VERSION 3.16)
 add_library(taow_cli_builder STATIC cli_builder.cpp)
 add_library(TAOW::cli_builder ALIAS taow_cli_builder)
 
-target_include_directories(taow_cli_builder PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
+target_include_directories(
+    taow_cli_builder PUBLIC 
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:include>
+)
