--- a/src/json/CMakeLists.txt
+++ b/src/json/CMakeLists.txt
@@ -2,7 +2,11 @@ cmake_minimum_required(VERSION 3.16)
 add_library(taow_json INTERFACE)
 add_library(TAOW::json ALIAS taow_json)
 
-target_include_directories(taow_json INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include)
+target_include_directories(
+    taow_json INTERFACE 
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:include>
+)
 
 find_package(nlohmann_json REQUIRED)
 
