--- a/src/cli_builder/CMakeLists.txt
+++ b/src/cli_builder/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.16)
-add_library(taow_cli_builder STATIC cli_builder.cpp)
+add_library(taow_cli_builder cli_builder.cpp)
 add_library(TAOW::cli_builder ALIAS taow_cli_builder)
 
 target_include_directories(
