--- a/src/logging/CMakeLists.txt
+++ b/src/logging/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 3.16)
-add_library(taow_logging logging.cpp log_manager.cpp)
+add_library(taow_logging log_manager.cpp)
 add_library(TAOW::logging ALIAS taow_logging)
 target_include_directories(
-    taow_logging PUBLIC 
+    taow_logging PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
     $<INSTALL_INTERFACE:include>
 )
