--- a/src/http_client/CMakeLists.txt
+++ b/src/http_client/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.16)
 add_library(taow_http_client http_client.cpp result.cpp form_encoding.cpp urls.cpp multipart.cpp)
 add_library(TAOW::http_client ALIAS taow_http_client)
 target_include_directories(
-    taow_http_client PUBLIC 
+    taow_http_client PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
     $<INSTALL_INTERFACE:include>
 )
@@ -19,3 +19,6 @@ find_package(OpenSSL REQUIRED)
 target_link_libraries(taow_http_client PUBLIC openssl::openssl)
 
 target_link_libraries(taow_http_client PUBLIC TAOW::utils)
+
+install(TARGETS taow_http_client DESTINATION lib)
+install(DIRECTORY include/ DESTINATION include)
