--- a/src/json/CMakeLists.txt
+++ b/src/json/CMakeLists.txt
@@ -3,7 +3,7 @@ add_library(taow_json INTERFACE)
 add_library(TAOW::json ALIAS taow_json)
 
 target_include_directories(
-    taow_json INTERFACE 
+    taow_json INTERFACE
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
     $<INSTALL_INTERFACE:include>
 )
@@ -11,3 +11,6 @@ target_include_directories(
 find_package(nlohmann_json REQUIRED)
 
 target_link_libraries(taow_json INTERFACE nlohmann_json::nlohmann_json)
+
+install(TARGETS taow_json)
+install(DIRECTORY include/ DESTINATION include)
